--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <section class="work-module" id="work1">
             <h2>cute cat-猫猫主题</h2>
             <div class="carousel-container">
+
                 <div class="carousel-slide">
                     <img src="images/work1/image (1).jpg" alt="作品1图片1">
                     <img src="images/work1/image (2).jpg" alt="作品1图片2">
@@ -27,6 +28,7 @@
                     <img src="images/work1/image (4).jpg" alt="作品1图片4">
                     <!-- 根据需要添加更多图片 -->
                 </div>
+
                 <button class="prev" onclick="changeSlide('work1', -1)"><i class="fas fa-chevron-left"></i></button>
                 <button class="next" onclick="changeSlide('work1', 1)"><i class="fas fa-chevron-right"></i></button>
             </div>
@@ -44,15 +46,16 @@
             <h2>柴犬主题</h2>
             <div class="carousel-container">
                 <div class="carousel-slide">
-                    <img src="images/work2/image1.jpg" alt="作品2图片1">
-                    <img src="images/work2/image2.jpg" alt="作品2图片2">
+                    <img src="images/work2/image (1).jpg" alt="作品2图片1">
+                    <img src="images/work2/image (2).jpg" alt="作品2图片2">
+                    <img src="images/work2/image (3).jpg" alt="作品2图片2">
                     <!-- 根据需要添加更多图片 -->
                 </div>
                 <button class="prev" onclick="changeSlide('work2', -1)"><i class="fas fa-chevron-left"></i></button>
                 <button class="next" onclick="changeSlide('work2', 1)"><i class="fas fa-chevron-right"></i></button>
             </div>
             <div class="download-section">
-                <a href="files/work2_download.pdf" download="作品2文件.pdf" class="download-button"
+                <a href="files/Titania_柴犬主题美化_0326.json" download="Titania_柴犬主题美化_0326.json" class="download-button"
                     data-workid="work2_download">
                     下载作品
                 </a>
@@ -65,15 +68,17 @@
             <h2>国风主题</h2>
             <div class="carousel-container">
                 <div class="carousel-slide">
-                    <img src="images/work3/image1.jpg" alt="作品3图片1">
+                    <img src="images/work3/image (1).jpg" alt="作品3图片1">
+                    <img src="images/work3/image (2).jpg" alt="作品3图片1">
+                    <img src="images/work3/image (3).jpg" alt="作品3图片1">
                     <!-- 根据需要添加更多图片 -->
                 </div>
                 <button class="prev" onclick="changeSlide('work3', -1)"><i class="fas fa-chevron-left"></i></button>
                 <button class="next" onclick="changeSlide('work3', 1)"><i class="fas fa-chevron-right"></i></button>
             </div>
             <div class="download-section">
-                <a href="files/work3_download.rar" download="作品3文件.rar" class="download-button"
-                    data-workid="work3_download">
+                <a href="files/Titania_国风主题美化_0412-14_1.0.1.json" download="Titania_国风主题美化_0412-14_1.0.1.json"
+                    class="download-button" data-workid="work3_download">
                     下载作品
                 </a>
                 <span class="download-count" id="count-work3_download">下载次数: 0</span>
@@ -85,15 +90,17 @@
             <h2>美式复古色系主题</h2>
             <div class="carousel-container">
                 <div class="carousel-slide">
-                    <img src="images/work4/image1.jpg" alt="作品4图片1">
+                    <img src="images/work4/image (1).jpg" alt="作品4图片1">
+                    <img src="images/work4/image (2).jpg" alt="作品4图片1">
+                    <img src="images/work4/image (3).jpg" alt="作品4图片1">
                     <!-- 根据需要添加更多图片 -->
                 </div>
                 <button class="prev" onclick="changeSlide('work4', -1)"><i class="fas fa-chevron-left"></i></button>
                 <button class="next" onclick="changeSlide('work4', 1)"><i class="fas fa-chevron-right"></i></button>
             </div>
             <div class="download-section">
-                <a href="files/work4_download.ai" download="作品4文件.ai" class="download-button"
-                    data-workid="work4_download">
+                <a href="files/Titania_复古色系主题美化_0321_1.0.3.json" download="Titania_复古色系主题美化_0321_1.0.3.json"
+                    class="download-button" data-workid="work4_download">
                     下载作品
                 </a>
                 <span class="download-count" id="count-work4_download">下载次数: 0</span>
@@ -105,15 +112,17 @@
             <h2>小月亮主题</h2>
             <div class="carousel-container">
                 <div class="carousel-slide">
-                    <img src="images/work5/image1.jpg" alt="作品5图片1">
+                    <img src="images/work5/image (1).jpg" alt="作品5图片1">
+                    <img src="images/work5/image (2).jpg" alt="作品4图片1">
+                    <img src="images/work5/image (3).jpg" alt="作品4图片1">
                     <!-- 根据需要添加更多图片 -->
                 </div>
                 <button class="prev" onclick="changeSlide('work5', -1)"><i class="fas fa-chevron-left"></i></button>
                 <button class="next" onclick="changeSlide('work5', 1)"><i class="fas fa-chevron-right"></i></button>
             </div>
             <div class="download-section">
-                <a href="files/work5_download.psd" download="作品5文件.psd" class="download-button"
-                    data-workid="work5_download">
+                <a href="files/Titania_小月亮主题美化_0323_1.0.1.json" download="Titania_小月亮主题美化_0323_1.0.1.json"
+                    class="download-button" data-workid="work5_download">
                     下载作品
                 </a>
                 <span class="download-count" id="count-work5_download">下载次数: 0</span>
@@ -122,7 +131,7 @@
     </main>
 
     <footer>
-        <p>© 2025 [Titania]. All rights reserved.</p>
+        <p>© 2025 Titania. All rights reserved.</p>
     </footer>
 
     <!-- Firebase SDK -->
