--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>我的美化作品集</title>
+    <title>塔里藏着Titania做的美化</title>
     <link rel="stylesheet" href="style.css">
     <!-- 引入 Font Awesome 来获取图标 (可选, 用于切换箭头) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Titania的Silly Tavern美化作品</h1>
+        <h1>Titania的Silly Tavern美化产出</h1>
     </header>
 
     <main>
