--- a/index.html
+++ b/index.html
@@ -128,6 +128,27 @@
                 <span class="download-count" id="count-work5_download">下载次数: 0</span>
             </div>
         </section>
+        <!-- 作品模块 6 -->
+        <section class="work-module" id="work5">
+            <h2>魔女的书房</h2>
+            <div class="carousel-container">
+                <div class="carousel-slide">
+                    <img src="images/work6/image (1).jpg" alt="作品5图片1">
+                    <img src="images/work6/image (2).jpg" alt="作品4图片1">
+                    <img src="images/work6/image (3).jpg" alt="作品4图片1">
+                    <!-- 根据需要添加更多图片 -->
+                </div>
+                <button class="prev" onclick="changeSlide('work5', -1)"><i class="fas fa-chevron-left"></i></button>
+                <button class="next" onclick="changeSlide('work5', 1)"><i class="fas fa-chevron-right"></i></button>
+            </div>
+            <div class="download-section">
+                <a href="files/Titania_魔女的书房主题美化_0406-09.json" download="Titania_魔女的书房主题美化_0406-09.json"
+                    class="download-button" data-workid="work6_download">
+                    下载作品
+                </a>
+                <span class="download-count" id="count-work6_download">下载次数: 0</span>
+            </div>
+        </section>
     </main>
 
     <footer>
