--- a/index.html
+++ b/index.html
@@ -149,6 +149,28 @@
                 <span class="download-count" id="count-work6_download">下载次数: 0</span>
             </div>
         </section>
+        <section class="work-module" id="work7">
+            <h2>green flower</h2>
+            <div class="carousel-container">
+
+                <div class="carousel-slide">
+                    <img src="images/work7/image (1).jpg" alt="作品1图片1">
+                    <img src="images/work7/image (2).jpg" alt="作品1图片2">
+                    <img src="images/work7/image (3).jpg" alt="作品1图片3">
+                    <!-- 根据需要添加更多图片 -->
+                </div>
+
+                <button class="prev" onclick="changeSlide('work7', -1)"><i class="fas fa-chevron-left"></i></button>
+                <button class="next" onclick="changeSlide('work7', 1)"><i class="fas fa-chevron-right"></i></button>
+            </div>
+            <div class="download-section">
+                <a href="files/Titania_green flower_0508.json" download="Titania_green flower_0508.json"
+                    class="download-button" data-workid="work7_download">
+                    下载作品
+                </a>
+                <span class="download-count" id="count-work7_download">下载次数: 0</span>
+            </div>
+        </section>
     </main>
 
     <footer>
