--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>塔里藏着Titania做的美化</title>
+    <title>塔里藏着Titania的美化</title>
     <link rel="stylesheet" href="style.css">
     <!-- 引入 Font Awesome 来获取图标 (可选, 用于切换箭头) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="shortcut icon" href="bitbug_favicon.ico" />
 </head>
 
 <body>
@@ -16,6 +17,28 @@
     </header>
 
     <main>
+        <!-- 作品模块 8 -->
+        <section class="work-module" id="work8">
+            <h2>cute purple</h2>
+            <div class="carousel-container">
+
+                <div class="carousel-slide">
+                    <img src="images/work8/image (1).png" alt="作品1图片1">
+                    <img src="images/work8/image (2).png" alt="作品1图片2">
+                    <!-- 根据需要添加更多图片 -->
+                </div>
+
+                <button class="prev" onclick="changeSlide('work1', -8)"><i class="fas fa-chevron-left"></i></button>
+                <button class="next" onclick="changeSlide('work1', 8)"><i class="fas fa-chevron-right"></i></button>
+            </div>
+            <div class="download-section">
+                <a href="files/Titania_cute purple_0526.json" download="Titania_cute purple_0526.json"
+                    class="download-button" data-workid="work8_download">
+                    下载作品
+                </a>
+                <span class="download-count" id="count-work8_download">下载次数: 0</span>
+            </div>
+        </section>
         <!-- 作品模块 1 -->
         <section class="work-module" id="work1">
             <h2>cute cat-猫猫主题</h2>
