--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <div class="carousel-container">
 
                 <div class="carousel-slide">
-                    <img src="images/work1/image (1).jpg" alt="作品1图片1">
-                    <img src="images/work1/image (2).jpg" alt="作品1图片2">
+                    <img src="images/work1/image (1).png" alt="作品1图片1">
+                    <img src="images/work1/image (2).png" alt="作品1图片2">
                     <!-- 根据需要添加更多图片 -->
                 </div>
 
@@ -89,8 +89,8 @@
             <h2>国风主题</h2>
             <div class="carousel-container">
                 <div class="carousel-slide">
-                    <img src="images/work3/image (1).jpg" alt="作品3图片1">
-                    <img src="images/work3/image (2).jpg" alt="作品3图片1">
+                    <img src="images/work3/image (1).png" alt="作品3图片1">
+                    <img src="images/work3/image (2).png" alt="作品3图片1">
                     <!-- 根据需要添加更多图片 -->
                 </div>
                 <button class="prev" onclick="changeSlide('work3', -1)"><i class="fas fa-chevron-left"></i></button>
@@ -110,8 +110,8 @@
             <h2>美式复古色系主题</h2>
             <div class="carousel-container">
                 <div class="carousel-slide">
-                    <img src="images/work4/image (1).jpg" alt="作品4图片1">
-                    <img src="images/work4/image (2).jpg" alt="作品4图片1">
+                    <img src="images/work4/image (1).png" alt="作品4图片1">
+                    <img src="images/work4/image (2).png" alt="作品4图片1">
                     <!-- 根据需要添加更多图片 -->
                 </div>
                 <button class="prev" onclick="changeSlide('work4', -1)"><i class="fas fa-chevron-left"></i></button>
@@ -131,8 +131,8 @@
             <h2>小月亮主题</h2>
             <div class="carousel-container">
                 <div class="carousel-slide">
-                    <img src="images/work5/image (1).jpg" alt="作品5图片1">
-                    <img src="images/work5/image (2).jpg" alt="作品4图片1">
+                    <img src="images/work5/image (1).png" alt="作品5图片1">
+                    <img src="images/work5/image (2).png" alt="作品4图片1">
                     <!-- 根据需要添加更多图片 -->
                 </div>
                 <button class="prev" onclick="changeSlide('work5', -1)"><i class="fas fa-chevron-left"></i></button>
@@ -151,8 +151,8 @@
             <h2>魔女的书房</h2>
             <div class="carousel-container">
                 <div class="carousel-slide">
-                    <img src="images/work6/image (1).jpg" alt="作品5图片1">
-                    <img src="images/work6/image (2).jpg" alt="作品4图片1">
+                    <img src="images/work6/image (1).png" alt="作品5图片1">
+                    <img src="images/work6/image (2).png" alt="作品4图片1">
                     <!-- 根据需要添加更多图片 -->
                 </div>
                 <button class="prev" onclick="changeSlide('work6', -1)"><i class="fas fa-chevron-left"></i></button>
@@ -171,9 +171,8 @@
             <div class="carousel-container">
 
                 <div class="carousel-slide">
-                    <img src="images/work7/image (1).jpg" alt="作品1图片1">
-                    <img src="images/work7/image (2).jpg" alt="作品1图片2">
-                    <img src="images/work7/image (3).jpg" alt="作品1图片3">
+                    <img src="images/work7/image (1).png" alt="作品1图片1">
+                    <img src="images/work7/image (2).png" alt="作品1图片2">
                     <!-- 根据需要添加更多图片 -->
                 </div>
 
